--- a/math/notes/env-notes.tex
+++ b/math/notes/env-notes.tex
@@ -88,7 +88,7 @@
 	footer=2em,
 	height=middle,
 	width=middle]
-\showframe    % show the layout
+% \showframe    % show the layout
 
 % useful urls
 \useURL[author-personal-email][mailto:SudipSinha.Bappa@Gmail.com][][SudipSinha.Bappa@Gmail.com]
@@ -262,6 +262,11 @@
 	text=Definition,
 	list=all,
 	listtext={Definition }]
+
+\defineenumeration [remark] [mathematicalstatement] [
+	text=Remark,
+	list=all,
+	listtext={Remark }]
 
 \defineenumeration [proof] [mathematicalstatement] [
 	text=Proof,
