* talk20190405: correct sign for Girsanov

--- a/math/talks/talk20190405.tex
+++ b/math/talks/talk20190405.tex
@@ -647,7 +647,7 @@
 	\starttheorem[title={\cite[short][KuoPengSzozda2013b]}]
 		Let \m{X_{\argdotsub}} and \m{Y^{\argdotsup}} be continuous square-integrable stochastic processes such that \m{X_{\argdotsub}} is adapted and \m{Y^{\argdotsup}} is instantly independent.
 
-		Then the translated stochastic process \m{W_{\argdotsub} = B_{\argdotsub} + ∫_0^{\argdotsup} (X_t + Y^t) \d t} is a near-martingale under the probability measure \m{\widetilde{ℙ}} defined by the Radon-Nikodym derivative \m{\frac{\d \widetilde{ℙ}}{\d ℙ} = 𝓔^{(X + Y)}_T}.
+		Then the translated stochastic process \m{W_{\argdotsub} = B_{\argdotsub} - ∫_0^{\argdotsup} (X_t + Y^t) \d t} is a near-martingale under the probability measure \m{\widetilde{ℙ}} defined by the Radon-Nikodym derivative \m{\frac{\d \widetilde{ℙ}}{\d ℙ} = 𝓔^{(X + Y)}_T}.
 	\stoptheorem
 \stopslide
 
