+ binomial theorem; + basic principle of counting

--- a/math/notes/env-notes.tex
+++ b/math/notes/env-notes.tex
@@ -253,26 +253,47 @@
 	% before=\startmathenv,
 	% after=\stopmathenv
 
+\defineenumeration [definition] [mathematicalstatement] [
+	text=Definition,
+	list=all,
+	listtext={Definition }]
+
+\defineenumeration [lemma] [mathematicalstatement] [
+	text=Lemma,
+	list=all,
+	listtext={Lemma }]
+
 \defineenumeration [theorem] [mathematicalstatement] [
 	text=Theorem,
 	list=all,
 	listtext={Theorem }]
 
-\defineenumeration [definition] [mathematicalstatement] [
-	text=Definition,
+\defineenumeration [corollary] [mathematicalstatement] [
+	text=Corollary,
 	list=all,
-	listtext={Definition }]
+	listtext={Corollary }]
+
+\defineenumeration [proposition] [mathematicalstatement] [
+	text=Proposition,
+	list=all,
+	listtext={Proposition }]
 
 \defineenumeration [remark] [mathematicalstatement] [
 	text=Remark,
 	list=all,
 	listtext={Remark }]
 
+\defineenumeration [example] [mathematicalstatement] [
+	text=Example,
+	list=all,
+	listtext={Example }]
+
 \defineenumeration [proof] [mathematicalstatement] [
 	text=Proof,
-	title=no,
+	% title=no,
 	number=no,
-	headstyle=italic,
+	headstyle=italic,    % This is for "Proof"
+	titlestyle=italic,    % This is for the title
 	style=normal,
 	before=,
 	after=,
