--- a/math/notes/prd-combinatorics/cmp-w1d2.tex
+++ b/math/notes/prd-combinatorics/cmp-w1d2.tex
@@ -1,4 +1,24 @@
-\startchapter [title={Binomial Theorem}]
+\startchapter [title={Counting}]
+
+	\startproposition[title={Basic principle of counting}]
+		Suppose two independent experiments are performed, and there are \m{m} possible outcomes of the first experiment and \m{n} possible outcomes of the second experiment. Then the total possible outcomes of of the two experiments combined is \m{m n}.
+	\stopproposition
+	
+	\startproof
+		Let \m{(i, j)} denote the case when the first experiment gives the \m{i}th outcome and the second experiment gives the \m{j}th outcome. Enumerating, we get
+		\startformula  \startmatrix[n=4]
+			\NC  (1, 1)  \NC  (1, 2)  \NC  …  \NC  (1, n)  \NR
+			\NC  (2, 1)  \NC  (2, 2)  \NC  …  \NC  (2, n)  \NR
+			\NC  ⋮       \NC  ⋮       \NC  ⋱  \NC  ⋮       \NR
+			\NC  (m, 1)  \NC  (m, 2)  \NC  …  \NC  (m, n)  \NR
+		\stopmatrix	 \stopformula
+		Since there are \m{m} rows and \m{n} columns, we have total \m{mn} entries.
+	\stopproof
+
+	\startremark
+		This can be generalized to a finite number of experiments.
+	\stopremark
+
 
 	\starttheorem [title={Binomial theorem}]
 		\startformula
