* probability: minor structural changes

--- a/math/notes/prd-combinatorics/cmp-w2d1.tex
+++ b/math/notes/prd-combinatorics/cmp-w2d1.tex
@@ -30,7 +30,11 @@
 		\BL
 	\stoptabulate
 
-	
+\stopchapter
+
+
+\startchapter [title={Axiomatic probability theory}]
+
 	\startdefinition [title={Probability axioms}]
 		A \emph{non-negative valued} function \m{ℙ} defined on the set of events is called a \emph{probability measure} if the following hold.
 		\startitemize [n, nowhite, after]
@@ -78,6 +82,5 @@
 			\NC  \NC =  ℙ(E) + ℙ(F) - ℙ(E ∩ F) .
 		\stopalign  \stopformula
 	\stopproof
-
 
 \stopchapter
