--- a/math/notes/prd-combinatorics/prd-combinatorics.tex
+++ b/math/notes/prd-combinatorics/prd-combinatorics.tex
@@ -8,6 +8,8 @@
 	% \component titlepage     %Titlepage for the book
 	\completecontent    % Contents
 
+	\component  cmp-handout
+
 \stopfrontmatter
 
 
