* combinatorics: structure; + exercises

--- a/math/notes/prd-combinatorics/prd-combinatorics.tex
+++ b/math/notes/prd-combinatorics/prd-combinatorics.tex
@@ -16,17 +16,12 @@
 \startbodymatter
 
 	\startpart[title={Combinatorics}, reference=prt:combinatorics]
-		\component  cmp-w1d1
-		\component  cmp-w1d2
-		\component  cmp-w1d3
-		\component  cmp-w1d4
+		\component  cmp-basics
+		\component  cmp-basics-exercises
 	\stoppart
 
 	\startpart[title={Probability Theory}, reference=prt:prob-th]
-		\component  cmp-w2d1
-		\component  cmp-w2d2
-		\component  cmp-w2d3
-		\component  cmp-w2d4
+		\component  cmp-probability
 	\stoppart
 
 	\startpart[title={Ramsey Theory}, reference=prt:Ramsey-th]
