--- a/math/notes/env-notes.tex
+++ b/math/notes/env-notes.tex
@@ -12,7 +12,8 @@
 % Colors
 \setvariables [document] [color-link-external=royalblue]
 \setvariables [document] [color-link-internal=violetred]
-\setvariables [document] [color-background=azure]
+% \setvariables [document] [color-background=azure]
+\setvariables [document] [color-background=white]
 \setvariables [document] [color-foreground=darkslategray]
 \setvariables [document] [color-headings=firebrick]
 % Fonts
