--- a/math/notes/prd-combinatorics/prd-combinatorics.tex
+++ b/math/notes/prd-combinatorics/prd-combinatorics.tex
@@ -22,6 +22,7 @@
 
 	\startpart[title={Probability Theory}, reference=prt:prob-th]
 		\component  cmp-probability
+		\component  cmp-probability-exercises
 	\stoppart
 
 	\startpart[title={Ramsey Theory}, reference=prt:Ramsey-th]
