+ NT@MC-QTM: proofs and number system

--- a/math/notes/env-notes.tex
+++ b/math/notes/env-notes.tex
@@ -248,6 +248,8 @@
 
 % Mathematical environments
 
+\definereferenceformat [eqref] [left=(, right=)]    % Referencing formulas
+
 \defineenumeration [mathematicalstatement] [
 	title=yes,    % now we can use title={}
 	number=no,    % remove if definitions shoud be numbered
